--- a/CRF_and_BiLSTM_experiments.ipynb
+++ b/CRF_and_BiLSTM_experiments.ipynb
@@ -498,6 +498,21 @@
    ],
    "outputs": [],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "true_labels_ = y_test\n",
+    "true_predictions_ = np.argmax(model.predict(X_test), axis=-1)\n",
+    "\n",
+    "true_labels_ = [list(x) for x in true_labels_]\n",
+    "true_predictions_ = [list(x) for x in true_predictions_]\n",
+    "\n",
+    "get_metrics(true_predictions_, true_labels_)"
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
