--- a/BERT_MeDAL_experiments.ipynb
+++ b/BERT_MeDAL_experiments.ipynb
@@ -25,7 +25,6 @@
     "#model_checkpoint = 'bionlp/bluebert_pubmed_mimic_uncased_L-12_H-768_A-12' #bluebert\n",
     "#model_checkpoint = 'NLP4H/ms_bert'\n",
     "#model_checkpoint = 'distilbert-base-uncased'\n",
-    "#model_checkpoint = 'emilyalsentzer/Bio_ClinicalBERT'\n",
     "model_checkpoint = 'allenai/scibert_scivocab_uncased'\n",
     "batch_size = 8\n",
     "from transformers import AutoTokenizer\n",
@@ -239,6 +238,16 @@
     "    rec_actual_ID = np.round(recall_score(true_labels, true_predictions, average=None, scheme='token' ) * 100, 2 )\n",
     "\n",
     "    return (f1_actual_ID, pre_actual_ID, rec_actual_ID)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "macro_scores, weighted_scores = get_AD_performance(predictions, labels)\n",
+    "id_perf = get_ID_performance(predictions, labels)"
    ],
    "outputs": [],
    "metadata": {}
