--- a/HuggingFace_dataset_creation.ipynb
+++ b/HuggingFace_dataset_creation.ipynb
@@ -292,8 +292,8 @@
     "#model_checkpoint = \"dmis-lab/biobert-v1.1\" #biobert\n",
     "#model_checkpoint = 'bionlp/bluebert_pubmed_mimic_uncased_L-12_H-768_A-12' #bluebert\n",
     "#model_checkpoint = 'NLP4H/ms_bert' #MS-BERT\n",
-    "#model_checkpoint = 'distilbert-base-uncased' #SciBERT\n",
-    "model_checkpoint = 'allenai/scibert_scivocab_uncased'\n",
+    "#model_checkpoint = 'distilbert-base-uncased' #Distilbert\n",
+    "model_checkpoint = 'allenai/scibert_scivocab_uncased' #SciBERT\n",
     "batch_size = 8\n",
     "from transformers import AutoTokenizer\n",
     "\n",
