--- a/HuggingFace_dataset_creation.ipynb
+++ b/HuggingFace_dataset_creation.ipynb
@@ -329,14 +329,14 @@
     "    word_ids = tokenized_inputs.word_ids()\n",
     "    previous_word_idx = None\n",
     "    for word_idx in word_ids:\n",
-    "        # Special tokens have a word id that is None. We set the label to -100 so they are automatically ignored in the loss function.\n",
+    "        # Special tokens have a word id that is None. We set the label to -100 so they can be automatically ignored when calculating performance.\n",
     "\n",
     "        if word_idx is None:\n",
     "            labels.append(-100)\n",
     "        # We set the label for the first token of each word.\n",
     "        elif word_idx != previous_word_idx:\n",
     "            labels.append(label[word_idx])\n",
-    "        # For the other tokens in a word, we set the label to either the current label\n",
+    "        # if part of same word, then set to same label\n",
     "        else:\n",
     "            labels.append(label[word_idx])\n",
     "\n",
